data/derived/sp14/progs/unify/prog0723.ml.out
Characters 375-445:
  ((eval(a, x, y) *. eval(a, x, y)) +. (eval(b, x, y) *. eval(c, x, y)))/2
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
